--- a/flex/05-flex-modal/style.css
+++ b/flex/05-flex-modal/style.css
@@ -20,8 +20,21 @@ body {
   width: 480px;
   border-radius: 10px;
   box-shadow: 2px 4px 16px rgba(0,0,0,.2);
+  display: flex;
+  padding: 16px;
+  align-items: flex-start;
+  justify-content: space-evenly;
+  gap: 16px;
+  
 }
 
+.header {
+  font-weight: bold;
+  font-size: 18px;
+}
+.text {
+  margin-bottom: 16px;
+}
 .icon {
   color: royalblue;
   font-size: 26px;
@@ -33,6 +46,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-shrink: 0;
 }
 
 .close-button {
@@ -46,6 +60,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-shrink: 0;
 }
 
 button {
