--- a/grid/02-grid-layout-2/style.css
+++ b/grid/02-grid-layout-2/style.css
@@ -8,6 +8,10 @@ body, html {
   height: 100%;
   padding: 16px;
   box-sizing: border-box;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: repeat(8, 1fr);
+  gap: 15px;
 }
 
 .container div {
@@ -21,20 +25,23 @@ body, html {
 
 .header {
   background-color: #FFDE22;
-  grid-column: 1 / 3;
+  grid-column: 1 / -1;
 }
 
 .sidebar {
   background-color: #FF7755;
-  grid-row: 2 / 4;
+  grid-row: 2 / -2;
 }
 
 .nav {
   background-color: #00DDFF;
+  grid-column: 2 / -1;
 }
 
 .article {
   background-color: #bccbde;
+  grid-column: 2 / -1;
+  grid-row: 3 / -2;
 }
 
 .article p {
@@ -46,5 +53,5 @@ body, html {
 
 .footer {
   background-color: #393f4d;
-  grid-column: 1 / 3;
+  grid-column: 1 / -1;
 }
