--- a/grid/03-grid-layout-3/style.css
+++ b/grid/03-grid-layout-3/style.css
@@ -2,9 +2,16 @@
   margin: 0;
   padding: 0;
 }
-
+html,
+body {
+  height: 100%;
+}
 .container {
   text-align: center;
+  display: grid;
+  grid-template-columns: 1fr 4fr;
+  gap: 4px;
+  height: 100%;
 }
 
 .container div {
@@ -17,6 +24,10 @@
 
 .header {
   background-color: #393f4d;
+  grid-column: 1 / -1;
+  display: grid;
+  grid-template-columns: 1fr 4fr;
+  align-items: center;
 }
 
 .menu ul,
@@ -26,6 +37,10 @@
 
 .sidebar {
   background-color: #FF7755;
+  display: grid;
+  gap: 50px;
+  grid-row: 2 / 4;
+
 }
 
 .sidebar .photo {
@@ -46,6 +61,7 @@
 
 .nav {
   background-color: #FF7755;
+  
 }
 
 .nav ul li {
@@ -55,6 +71,10 @@
 
 .article {
   background-color: #bccbde;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  gap: 15px;
+  grid-column: 2 / -1;
 }
 
 .article p {
@@ -68,6 +88,7 @@
   background-color: #FFFFFF;
   color: black;
   text-align: center;
+  height: 200px;
 }
 
 .card p {
@@ -83,9 +104,21 @@
 
 .footer {
   background-color: #393f4d;
+  grid-column: 1 / -1;
 }
 
 .footer p {
   font-size: 13px;
   font-weight: normal;  
+}
+ul {
+  list-style-type: none;
+}
+.menu ul {
+  display: grid;
+  grid-template-columns: repeat(4, 2fr);
+}
+.nav ul {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
 }
